Minor CSS update for responsiveness

--- a/src/assets/styles/global.css
+++ b/src/assets/styles/global.css
@@ -1016,7 +1016,7 @@ body.light .project-card:hover {
     /* padding-top: 3rem; */
 
     max-width: 720px;
-    max-height: calc(100vh - 8rem);
+    max-height: calc(100dvh - 8rem);
 
     background: var(--bg);
     border-radius: 12px;
@@ -1033,7 +1033,7 @@ body.light .project-card:hover {
 ========================= */
 
 .modal-scroll {
-    max-height: calc(100vh - 8rem);
+    max-height: calc(100dvh - 8rem);
     overflow-y: auto;
 }
 
